More Maintenance Work

--- a/src/main/resources/assets/gtadditions/lang/en_us.lang
+++ b/src/main/resources/assets/gtadditions/lang/en_us.lang
@@ -2868,8 +2868,21 @@ gtadditions.multiblock.universal.tooltip.5=Boost Chance: §e%d%%§r
 gtadditions.multiblock.universal.distinct=Distinct Buses:
 gtadditions.multiblock.universal.distinct.yes=§aYes
 gtadditions.multiblock.universal.distinct.no=§cNo
-gtadditions.multiblock.universal.distinct.info=If enabled, each bus will be treated as fully distinct from eachother for recipe lookup. Useful for example for Extruder Shapes, Laser Lenses, etc..
-gtadditions.multiblock.universal.problems=Problems: %s
+gtadditions.multiblock.universal.distinct.info=If enabled, each bus will be treated as fully distinct from each other for recipe lookup. Useful for example for Extruder Shapes, Laser Lenses, etc..
+gtadditions.multiblock.universal.has_problems=Has Problems!
+gtadditions.multiblock.universal.no_problems=No Problems Found!
+gtadditions.multiblock.universal.problem.wrench=Pipe is loose.
+gtadditions.multiblock.universal.problem.wrench.tooltip=Wrench
+gtadditions.multiblock.universal.problem.screwdriver=Screws are loose.
+gtadditions.multiblock.universal.problem.screwdriver.tooltip=Screwdriver
+gtadditions.multiblock.universal.problem.softhammer=Something is stuck.
+gtadditions.multiblock.universal.problem.softhammer.tooltip=Soft Hammer
+gtadditions.multiblock.universal.problem.hardhammer=Plating is dented.
+gtadditions.multiblock.universal.problem.hardhammer.tooltip=Hard Hammer
+gtadditions.multiblock.universal.problem.wirecutter=Wires burned out.
+gtadditions.multiblock.universal.problem.wirecutter.tooltip=Wire Cutter
+gtadditions.multiblock.universal.problem.crowbar=That doesn't belong there.
+gtadditions.multiblock.universal.problem.crowbar.tooltip=Crowbar
 gtadditions.multiblock.fusion_reactor.heat=Heat: %d
 gtadditions.multiblock.fusion_reactor.tooltip.1=EU To Start: %s
 gtadditions.multiblock.central_monitor.height=Screen Height:
