Improve Full Auto Maintenance & JEI

--- a/src/main/resources/assets/gtadditions/lang/en_us.lang
+++ b/src/main/resources/assets/gtadditions/lang/en_us.lang
@@ -1978,7 +1978,7 @@ tile.ga_metal_casing_1.casing_nitinol_60.name=Superelastic Nitinol 60 Casing
 tile.ga_metal_casing_1.casing_inconel_625.name=High-Stress Inconel 625 Casing
 tile.ga_metal_casing_1.casing_grisium.name=Watertight Grisium Casing
 tile.ga_metal_casing_1.casing_eglin_steel.name=High-Impact Eglin Steel Casing
-tile.ga_metal_casing_1.casing_babbit_alloy.name=Gall Resistant Babbit Alloy Casing
+tile.ga_metal_casing_1.casing_babbitt_alloy.name=Gall Resistant Babbitt Alloy Casing
 tile.ga_metal_casing_1.casing_hg_1223.name=Toxic Hg-1223 Casing
 tile.ga_metal_casing_1.casing_tumbaga.name=Malleable Tumbaga Casing
 tile.ga_metal_casing_1.casing_talonite.name=Low Friction Talonite Casing
