--- a/src/main/resources/assets/gtadditions/lang/en_us.lang
+++ b/src/main/resources/assets/gtadditions/lang/en_us.lang
@@ -1568,6 +1568,9 @@ gtadditions.machine.large_brewery.name=Large Brewery
 gtadditions.machine.large_electromagnet.name=Large Electromagnet
 gtadditions.machine.large_extractor.name=Large Extractor
 gtadditions.machine.large_arc_furnace.name=Large Arc Furnace
+gtadditions.machine.large_canning_machine.name=Large Canning Machine
+gtadditions.machine.large_mass_fabricator.name=Large Mass Fabricator
+gtadditions.machine.large_replicator.name=Large Replicator
 
 gtadditions.machine.naquadah_reactor.mk2.name=Naquadah Reactor MK I
 gtadditions.machine.naquadah_reactor.mk3.name=Naquadah Reactor MK II
